# build_embed_linux_system

./: .gitignore  0-1.linux平台软件安装.md  0.embed_linux_environment_build.md  1-1.shell脚本语法.md  1-2.Makefile语法.md  1-3.Makefile语法和应用.md  1.embed_linux_system_bringup.md  2.embed_linux_driver_design.md  LICENSE  README.md  develop_env_build.md  readme_file.py
file/: buildEnvironment.sh  mainFrame.drawio  preBuildEnvironment.sh
file/1-3.Makefile语法和应用/: Makefile  application.hpp  buildtool.mk  main.c
file/Chapter0-2/: pull_build_linux_software.sh
file/Chapter1-2/: Makefile  buildtool.mk  main.cpp  static_test.cpp
src/: PRFEACE.md  README.md  SUMMARY.md  Visual Studio Code.lnk  ch00.PRFEACE.md  ch01-00.platform_env_struct.md  ch01-01.linux_shell_cmd.md  ch01-01.linux_software_install.md  ch01-02.linux_software_compiler.md  ch01-02.linux_software_install.md  ch01-03.linux_cross_compiler.md  ch01-03.linux_shell_grammar.md  ch01-04.linux_cross_compiler.md  ch01-04.linux_shell_grammar.md  ch01-05.linux_issue_conclusion.md  ch01-05.linux_quick_deploy.md  ch01-06.linux_quick_deploy.md  ch01-x1.linux_feature.md  ch01-x1.linux_feature_notes.md  ch01-x1.linux_function.md  ch01-x1.linux_quick_platform.md  ch01-xz.linux_feature_notes.md  ch02-00.system_bringup.md  ch02-01.makefile.md  ch02-01.makefile_grammar.md  ch02-02.kconfig.md  ch02-02.makefile_grammar.md  ch02-02.menuconfig.md  ch02-02.uboot.md  ch02-03.uboot.md  ch02-03.uboot_analyse.md  ch02-03.uboot_imx_transplate.md  ch02-03.uboot_transplant.md  ch02-04.kernel.md  ch02-04.uboot_env.md  ch02-05.rootfs.md  ch02-05.uboot_analyse.md  ch02-06.kernel_transplate.md  ch02-06.qemu_simulate.md  ch02-07.kernel_analyse.md  (+206 more)
src/file/: Embed Linux Design.xlsx  Linux_device_model.docx  application.drawio  drivers.drawio  drivers_complex.drawio  drivers_sample.drawio  embed_linux_design.xlsx  firmware.drawio  mainframe.xlsx  tree.drawio  开发板功能整理.xlsx
src/file/Chapter1-1/: preBuildEnvironment.sh  test.sh
src/file/ch01/: preBuildEnvironment.sh  runscript.sh  test.sh  testfile
src/file/ch01-03/: 01.shell_var.sh  02.function.sh  03.math_logic.sh  04.file_remap.sh  05.loop_branch.sh  1.txt  system_info.sh  test.sh  test.txt
src/file/ch01-06/: preBuildEnvironment.sh  pull_build_linux_software.sh  runscript.sh  test.sh  testfile
src/file/ch02-02/: Makefile  main1.cpp
src/file/ch02-03/: uboot.xlsx
src/file/ch02-06/: Makefile  imx6ull-14x14-emmc-4.3-800x480-c.dts  imx_rmk_v7_defconfig  mx6ul_14x14_evk_defconfig
src/file/ch02-08/: create_debain.sh  imx6ull_user_defconfig
src/file/ch02-13/: Makefile  build.sh  image_display.pro  main.cpp  mainwindow.cpp  mainwindow.h
src/file/ch02-x1/: make.sh
src/file/ch02-x2/: make.sh
src/file/ch02-x6/: boot.cmd  build_shell.sh  imx6ull-rmk-overlay.dts
src/file/ch02-xz/: mksdcard.sh  ucl2.xml
src/file/ch03-00.driver_design/: ch03-00.linux.drawio
src/file/ch03-01.device_tree/: mx6ull.md
src/file/ch03-03/: kernel_led.c  kernel_miscbeep.c
src/file/ch03-03.char_device/: beep_test.c  kernel_miscbeep.c
src/file/ch03-04/: Makefile  kernel_led.c
src/file/ch03-04.pinctrl_device/: kernel_led.c
src/file/ch03-05/: kernel_input.c
src/file/ch03-05.input_subsystem/: kernel_input.c  kernel_key.c
src/file/ch03-06.i2c_frame/: kernel_i2c_ap.c
src/file/ch03-07/: Makefile  kernel_i2c_ap.c
src/file/ch03-07.spi_frame/: kernel_spi_icm.c
src/file/ch03-08/: Makefile  kernel_spi_icm.c
src/file/ch03-08.iio_subsystem/: kernel_iio_adc.c  kernel_iio_hx711.c  vf610_adc.c
src/file/ch03-09/: kernel_iio_adc.c
src/file/ch03-09.remap_subsystem/: kernel_regmap_i2c.c  kernel_regmap_spi.c
src/file/ch03-10/: kernel_regmap_i2c.c  kernel_regmap_spi.c
src/file/ch03-10.rtc_subsystem/: kernel_rtc_pcf8563.c
src/file/ch03-11/: Makefile  kernel_rtc_pcf8563.c
src/file/ch04-08/: CMakeLists.txt  bmp_image.cpp  bmp_image.hpp  fb_draw.cpp  fb_draw.hpp  main.cpp
src/file/ch04-08/01.fb_signal/: CMakeLists.txt  main.c
src/file/ch04-08/02.fb_multi_cache/: CMakeLists.txt  main.c
src/file/ch04-08/03.fb_graphic/: CMakeLists.txt  fb_char.c  fb_graphic.h  main.c
src/file/ch04-08/04.fb_cpp/: CMakeLists.txt  fb_draw.cpp  fb_draw.hpp  main.cpp
src/file/ch04-12/: CMakeLists.txt  Makefile  main.cpp  mqtt_client.cpp
src/file/ch04-12/mqtt_node_0/: Makefile  mqtt_node.cpp
src/file/ch04-12/mqtt_node_1/: Makefile  mqtt_node.cpp
src/file/ch04-12/mqtt_paho/: mqtt_client.py
src/file/ch04-13/modbus_s/: CMakeLists.txt  Makefile  main.cpp  restart.sh
src/file/ch04-13/modbus_s/event/: semaphore.hpp
src/file/ch04-13/modbus_s/freemodbus/: CMakeLists.txt  mb.c
src/file/ch04-13/modbus_s/freemodbus/functions/: mbfunccoils.c
src/file/ch04-13/modbus_s/freemodbus/include/: mbport.h
src/file/ch04-13/modbus_s/freemodbus/rtu/: mbrtu.c
src/file/ch04-13/modbus_s/freemodbus/tcp/: mbtcp.cpp
src/file/ch04-13/modbus_s/port/: fifo_manage.cpp  logger.hpp  port.h  portevent.cpp  portserial.cpp  porttcp.cpp  porttimer.cpp  tty.hpp
src/file/ch04-13/modbus_s/unittest/: unit_test.py
src/file/ch04-x3/project-03/: CMakeLists.txt  main.cpp
src/file/ch04-x3/project-04/: CMakeLists.txt  main.cpp
src/file/ch04-x3/project-04/lib/: main.hpp  test1.cpp  test2.cpp  test3.cpp
src/file/ch04-x3/project-05/: CMakeLists.txt  main.cpp
src/file/ch04-x3/project-05/lib/: CMakeLists.txt  test.cpp
src/file/ch04-x3/project-05/lib/include/: test.hpp
src/file/ch04-x3/project-06/: CMakeLists.txt  main.cpp  test.c  test.h
src/file/ch04-x3/project-07/: CMakeLists.txt
src/file/ch04-x3/project-08/: CMakeLists.txt  file1.cpp
src/file/ch04-x3/project-09/: CMakeLists.txt  file2.cpp
src/file/ch04-x3/project-10/: CMakeLists.txt  main.cpp
src/file/ch04-x3/project-11/: CMakeLists.txt  main.cpp
src/file/ch04-x3/project-11-1/: CMakeLists.txt  main.cpp
src/file/ch04-x3/project-11-1/cmake/: FindMosquitto.cmake
src/file/ch04-x3/project-11/cmake/: FindUSER_FILES.cmake
src/file/ch04-x3/project-13/application/: CMakeLists.txt  includes.h  main.c
src/file/ch04-x3/project-13/dynamic_library/: CMakeLists.txt  mainso.cpp
(+206 files in other folders)
